Day10 with good_lp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,11 @@ pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
+good_lp = { version = "*", features = ["microlp"], default-features = false }
+
+# Apparently terrible performance in debug so do it in performance
+[profile.dev.package.good_lp]
+opt-level = 3
+
+[profile.dev.package.microlp]
+opt-level = 3
